[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvizio"
dynamic = ["version"]
description = "Python library for interfacing with Vizio SmartCast TVs and Sound Bars (2016+ models)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [
    { name = "Vlad Korniev", email = "vladimir.kornev@gmail.com" }
]
keywords = ["vizio", "smartcast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp",
    "click",
    "requests",
    "tabulate>=0.8.6",
    "xmltodict",
    # zeroconf is unconditionally imported from ``pyvizio/__init__.py``
    # (via ``pyvizio.discovery.zeroconf``), so it must be a hard
    # dependency — not an opt-in extra. The ``[discovery]`` extra below
    # is preserved for backward compatibility with anyone who installs
    # ``pyvizio[discovery]`` in their requirements files.
    "zeroconf>=0.31",
]

[project.optional-dependencies]
discovery = [
    "zeroconf>=0.31",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "aioresponses>=0.7",
    "zeroconf>=0.31",
]
dev = [
    "pyvizio[test]",
    "mypy>=1.0",
    "types-requests",
    "types-tabulate",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.scripts]
pyvizio = "pyvizio.cli:cli"

[project.urls]
Homepage = "https://github.com/vkorn/pyvizio"
Repository = "https://github.com/vkorn/pyvizio"

[tool.setuptools.dynamic]
version = {attr = "pyvizio.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "venv", "venv.*"]

[tool.setuptools.package-data]
"pyvizio.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E203",   # whitespace before ':' (conflicts with black/ruff formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pyvizio"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
